<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/white"
    android:orientation="vertical" >
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/ll_bottom_tool_bar"
        android:layout_alignParentTop="true"
        android:padding="8dip"
        android:src="@drawable/logo"
        tools:ignore="ContentDescription" />

	<LinearLayout 
	    android:id="@+id/ll_bottom_tool_bar"
	    android:orientation="vertical"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_alignParentBottom="true" >
	    <Button 
	        android:id="@+id/btn_choose_pic"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	    	android:layout_margin="10dip"
	        android:text="@string/choose_pic"
	        android:background="@drawable/selector_btn"/>
	    <Button 
	        android:id="@+id/btn_take_pic"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	    	android:layout_margin="10dip"
	        android:text="@string/take_pic"
	        android:background="@drawable/selector_btn"/>
<!-- 	    <LinearLayout  -->
<!-- 	        android:orientation="horizontal" -->
<!-- 	        android:layout_width="match_parent" -->
<!-- 	        android:layout_height="wrap_content" -->
<!-- 	        android:layout_margin="10dip"> -->
	        <Button 
		        android:id="@+id/btn_person_manager"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
	    		android:layout_margin="10dip"
		        android:layout_weight="1"
		        android:text="@string/person_manager"
		        android:background="@drawable/selector_btn"/>
	        <Button 
		        android:id="@+id/btn_group_manager"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
	    		android:layout_margin="10dip"
		        android:layout_weight="1"
		        android:text="@string/group_manager"
		        android:background="@drawable/selector_btn"/>
<!-- 	    </LinearLayout> -->
<!-- 	    <Button  -->
<!-- 	        android:id="@+id/btn_faceset_manager" -->
<!-- 	        android:layout_width="match_parent" -->
<!-- 	        android:layout_height="wrap_content" -->
<!-- 	    	android:layout_margin="10dip" -->
<!-- 	        android:text="@string/faceset_manager" -->
<!-- 	        android:background="@drawable/selector_btn"/> -->
	</LinearLayout>
</RelativeLayout>